# tempo

./: .gitignore  README.md  pyproject.toml
requirements/: dev.txt  prod.txt  test.txt
src/tempo/: main.py
src/tempo/db/: models.py  utils.py
src/tempo/routers/: customers.py  invoices.py  projects.py  tasks.py  time_entries.py  users.py
src/tempo/static/: backup.css
src/tempo/templates/: base.html  invoice_view.html  projects.html  reports.html  users.html
tempo/: main.py
tempo/db/: config.py  database.py  utils.py
tempo/routers/: customers.py  invoices.py  projects.py  tasks.py  time_entries.py  users.py
tempo/static/: custom.css  script.js
tempo/templates/: customers.html  index.html  invoices.html  time_entries.html
